fixed spacing on mobile gallery

--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,7 @@ p {
 .cc_cookies-card img {
     width:500px;
     height:400px;
+    width: 100%;
 }
 .brownies-card img {
     width:500px;
@@ -234,6 +235,7 @@ p {
 .rice_krispies-card img {
     width:500px;
     height:400px;
+    width:100%;
 }
 .baby_cookies-card img {
     width:500px;
